# Python-Dynasty_Sim

./: README.md  README.txt  main.py  pyproject.toml
data/: firstnames.csv  lastnames.csv
dynasty_sim/: __init__.py  cli.py  constants.py  display.py  game.py  models.py  roster.py  schedule.py  state.py
tests/: test_game.py  test_models.py  test_roster.py
