[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasty-sim"
version = "1.0.0"
description = "NFL Dynasty Simulator — manage your team through a full season"
requires-python = ">=3.11"

[project.scripts]
dynasty-sim = "dynasty_sim.cli:main"

[tool.setuptools.packages.find]
include = ["dynasty_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
